<resources>
    <string name="app_name">K-FARMER</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>


    <string name="farmer_reg">FARMER REGISTRATION</string>
    <string name="dealer_reg">DEALER REGISTRATION</string>
    <string name="expert_reg">EXPERTS REGISTRATION ONLY</string>
    <string name="farmer">FARMER</string>
    <string name="dealer">DEALER</string>
    <string name="registation">REGISTRATION SELECTION</string>
    <string name="sale">POST PRODUCT</string>
    <string name="fname">First Name*</string>
    <string name="sname">Surname*</string>
    <string name="phone_no">Phone No*</string>
    <string name="email">Email Address*</string>
    <string name="county">County*</string>
    <string name="district">District*</string>
    <string name="btnsubmit">SUBMIT</string>
    <string name="firmname"> Firm Name*</string>
    <string name="firm_town">Firm Location Description* </string>
    <string name="dealername">Dealer Name or Owner*</string>
    <string name="password">Password*</string>
    <string name="password2">Confirm Password*</string>

    <string name="productname">Product Name*</string>
    <string name="quantity">Quantity*</string>
    <string name="amount">Amount*</string>
    <string name="description">Description*</string>

    <string name="expertname">Name*</string>
    <string name="areaofoperation">Area of Operation*</string>
    <string name="education">Level of education*</string>
    <string name="specialization">Field of specialization*</string>




<!--county array-->
    <string-array name="county">
        <item>Nairobi</item>
        <item>Machakos</item>
        <item>Kiambu</item>
        <item>Homabay</item>
        <item>Mandera</item>
        <item>Select county</item>
    </string-array>

    <!-- BUSINESS NATURE ARRAY-->
    <string-array name="business_nature">
        <item>Retailer</item>
        <item>Wholesaler</item>
        <item>Both</item>
    </string-array>

    <!-- PRODUCT CATEGORY-->
    <string-array name="product_category">
        <item>Vegetables</item>
        <item>Legumes</item>
        <item>Roots</item>
        <item>Grains</item>
    </string-array>
</resources>
