<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:text="@string/expert_reg"/>
        <View
            style="@style/Linedivider">
        </View>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:hint="@string/expertname"
                android:id="@+id/expertname"
                style="@style/EditText"/>

            <EditText
                style="@style/EditText"
                android:hint="@string/areaofoperation"
                android:id="@+id/expert_location"/>

            <EditText
                style="@style/EditText"
                android:hint="@string/education"
                android:id="@+id/education"/>
            <EditText
                style="@style/EditText"
                android:hint="@string/specialization"
                android:id="@+id/specialization"/>
            <EditText
                style="@style/EditText"
                android:hint="@string/phone_no"
                android:phoneNumber="true"
                android:id="@+id/expert_phone_no"/>

            <EditText
                style="@style/EditText"
                android:hint="@string/email"
                android:id="@+id/expert_email"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/pass"
                android:hint="@string/password"/>
            <EditText
                style="@style/EditText"
                android:id="@+id/pass2"
                android:hint="@string/password2"/>

            <Button
                style="@style/Button"
                android:layout_gravity="center"
                android:id="@+id/expert_registration"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>